--- a/searchAPI/pom.xml
+++ b/searchAPI/pom.xml
@@ -10,5 +10,24 @@
 		<artifactId>json</artifactId>
 		<version>20141113</version>
 	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit-dep</artifactId>
+		<version>4.10</version>
+		<exclusions>
+			<exclusion>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId> 
+			</exclusion>
+		</exclusions>
+	</dependency>
+	<dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest-all</artifactId>
+		<version>1.1</version>
+		
+			
+	</dependency>
+	
 </dependencies>
 </project>
